<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_marginLeft="10dip"
		android:layout_marginTop="20dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<!-- 会社名 -->
		<TextView
			android:id="@+id/companyNameLabel"
			android:text="@string/company_name"
			android:textSize="19dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<!-- 組織名 -->
			<TextView
				android:id="@+id/organizationNameLabel"
				android:text="@string/organization_name"
				android:layout_marginLeft="10dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<!-- 役職名 -->
			<TextView
				android:id="@+id/positionNameLabel"
				android:text="@string/position_name"
				android:layout_marginLeft="10dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_marginTop="40dip"
		android:layout_marginRight="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<!-- 人名 -->
		<TextView
			android:id="@+id/personNameLabel"
			android:text="@string/person_name"
			android:textSize="25dip"
			android:gravity="right"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<!-- 住所 -->
		<TextView
			android:id="@+id/addressLabel"
			android:text="@string/address"
			android:textSize="20dip"
			android:layout_marginLeft="10dip"
			android:gravity="right"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<!-- 電話1 -->
		<TextView
			android:id="@+id/tel1Label"
			android:text="@string/tel1"
			android:autoLink="phone"
			android:textSize="20dip"
			android:gravity="right"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<!-- 電話2 -->
		<TextView
			android:id="@+id/tel2Label"
			android:text="@string/tel2"
			android:autoLink="phone"
			android:gravity="right"
			android:textSize="20dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<!-- メール -->
		<TextView
			android:id="@+id/mailLabel"
			android:text="@string/mail"
			android:autoLink="email"
			android:textSize="20dip"
			android:gravity="right"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>